# notebooks

./: .gitignore  Classification.ipynb  LinearRegression - Validacion.ipynb  LinearRegression.ipynb  README.md  data_prep.ipynb  pyproject.toml
data/: diabetes.csv
data/raw/: churn.csv
notebooks/: 3.01.gdr.linear-regresion.ipynb  3.03.gdr.linear-regresion-with-validation.ipynb  3.04.gdr.clustering.ipynb  3.05.gdr.association_rules.ipynb  3.06.gdr.anomaly_detection.ipynb  3.07.gdr.text_mining.ipynb  3.08.gdr.user-based_reccomendation_system.ipynb  3.09.gdr.matrix_factorization.ipynb
