[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter-data-science>=2.3.0",
    "imblearn>=0.0",
    "mlxtend>=0.23.4",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pygwalker>=0.4.9.15",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
